feat: add teacher CRUD endpoint
